--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -38,21 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "caring-truck",
    "metadata": {
     "id": "caring-truck",
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, world!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello, world!\")"
    ]
@@ -73,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "built-contact",
    "metadata": {
     "id": "built-contact"
@@ -87,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "alert-charm",
    "metadata": {
     "id": "alert-charm",
@@ -98,42 +90,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n",
-      "15\n",
-      "20\n",
-      "30\n"
+      "Введите количество строк: 3\n",
+      "Введите количество столбцов: 6\n",
+      "Введите минимальное значение элемента: 12\n",
+      "Введите максимальное значение элемента: 4\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "array([[26, 27, 25, 24, 23, 21, 20, 20, 21, 29, 26, 25, 22, 25, 21],\n",
-       "       [24, 28, 22, 25, 27, 20, 28, 29, 28, 24, 23, 29, 21, 20, 28],\n",
-       "       [29, 27, 28, 24, 20, 25, 26, 28, 27, 21, 23, 29, 20, 23, 26],\n",
-       "       [21, 22, 29, 25, 24, 20, 22, 25, 25, 20, 26, 20, 29, 20, 26],\n",
-       "       [25, 27, 22, 21, 23, 26, 24, 29, 29, 27, 26, 28, 27, 29, 24],\n",
-       "       [29, 29, 27, 29, 20, 20, 23, 24, 23, 23, 25, 21, 22, 20, 28],\n",
-       "       [24, 20, 29, 29, 23, 20, 25, 20, 23, 20, 28, 28, 27, 20, 22],\n",
-       "       [20, 25, 29, 23, 26, 22, 25, 23, 28, 23, 26, 24, 27, 20, 27],\n",
-       "       [23, 27, 21, 26, 21, 22, 25, 23, 26, 22, 28, 23, 23, 21, 25],\n",
-       "       [29, 29, 29, 28, 20, 20, 20, 25, 29, 28, 27, 25, 27, 28, 26],\n",
-       "       [28, 20, 28, 25, 27, 29, 22, 25, 23, 21, 21, 21, 28, 25, 29],\n",
-       "       [29, 21, 29, 21, 22, 22, 25, 21, 28, 21, 29, 25, 26, 24, 28],\n",
-       "       [28, 22, 24, 23, 22, 23, 23, 28, 26, 24, 26, 28, 26, 20, 28]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "low >= high",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [33]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m user_min_limit \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mВведите минимальное значение элемента: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      8\u001b[0m user_max_limit \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mВведите максимальное значение элемента: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m---> 10\u001b[0m matrix \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_matrix\u001b[49m\u001b[43m(\u001b[49m\u001b[43muser_m\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muser_n\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muser_min_limit\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muser_max_limit\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(matrix)\n",
+      "Input \u001b[1;32mIn [33]\u001b[0m, in \u001b[0;36mcreate_matrix\u001b[1;34m(m, n, min_limit, max_limit)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcreate_matrix\u001b[39m(m, n, min_limit, max_limit):\n\u001b[1;32m----> 2\u001b[0m     A \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandint\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmin_limit\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_limit\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m A\n",
+      "File \u001b[1;32mmtrand.pyx:763\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.randint\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m_bounded_integers.pyx:1338\u001b[0m, in \u001b[0;36mnumpy.random._bounded_integers._rand_int32\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: low >= high"
+     ]
     }
    ],
    "source": [
-    "user_m = int(input()) #stroka\n",
-    "user_n = int(input()) #stolb\n",
-    "user_min_limit = int(input())\n",
-    "user_max_limit = int(input())\n",
-    "A = np.random.randint(user_min_limit, user_max_limit, size=(user_m, user_n))\n",
-    "A"
+    "def create_matrix(m, n, min_limit, max_limit):\n",
+    "    A = np.random.randint(min_limit, max_limit, size=(m, n))\n",
+    "    return A\n",
+    "\n",
+    "user_m = int(input(\"Введите количество строк: \"))\n",
+    "user_n = int(input(\"Введите количество столбцов: \"))\n",
+    "user_min_limit = int(input(\"Введите минимальное значение элемента: \"))\n",
+    "user_max_limit = int(input(\"Введите максимальное значение элемента: \"))\n",
+    "\n",
+    "matrix = create_matrix(user_m, user_n, user_min_limit, user_max_limit)\n",
+    "print(matrix)"
    ]
   },
   {
@@ -146,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "fe14cec0",
    "metadata": {},
    "outputs": [
@@ -154,40 +143,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "6\n",
-      "1\n",
-      "34\n"
+      "Введите количество строк: 3\n",
+      "Введите количество столбцов: 5\n",
+      "Введите минимальное значение элемента: 12\n",
+      "Введите максимальное значение элемента: 34\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[[19, 17, 15],\n",
-       " [29, 21, 31],\n",
-       " [2, 1, 3],\n",
-       " [22, 34, 32],\n",
-       " [24, 33, 26],\n",
-       " [11, 10, 13]]"
+       "array([[30, 18, 21, 13, 26, 17],\n",
+       "       [35, 21, 38, 13, 12, 21],\n",
+       "       [33, 32, 38, 21, 25, 44]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A = []\n",
-    "user_m = int(input()) #stroka\n",
-    "user_n = int(input()) #stolb\n",
-    "user_min_limit = int(input()) \n",
-    "user_max_limit = int(input())\n",
-    "for i in range(user_n):\n",
-    "    b = []\n",
-    "    for i in range(user_m):\n",
-    "        b.append(random.randint(user_min_limit,user_max_limit))\n",
-    "    A.append(b)\n",
-    "A"
+    "def create_matrix(m, n, min_limit, max_limit):\n",
+    "    A = np.random.randint(min_limit, max_limit, size=(m, n))\n",
+    "    return A\n",
+    "\n",
+    "user_m = int(input(\"Введите количество строк: \"))\n",
+    "user_n = int(input(\"Введите количество столбцов: \"))\n",
+    "user_min_limit = int(input(\"Введите минимальное значение элемента: \"))\n",
+    "user_max_limit = int(input(\"Введите максимальное значение элемента: \"))\n",
+    "\n",
+    "matrix_2 = create_matrix(user_m, user_n, user_min_limit, user_max_limit)\n",
+    "matrix"
    ]
   },
   {
@@ -206,65 +192,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "opposed-creature",
    "metadata": {
     "id": "opposed-creature"
    },
    "outputs": [],
    "source": [
-    "import copy"
+    "import copy\n",
+    "import timeit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "cleared-anniversary",
    "metadata": {
     "id": "cleared-anniversary",
     "outputId": "b7c76c60-4acb-4c14-9bfb-d4f8d71093a1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 3 6 7]\n",
+      " [1 3 6 7]\n",
+      " [1 3 6 7]] \n",
+      "\n",
+      "[[1 3 6 7]\n",
+      " [1 3 6 7]\n",
+      " [1 3 6 7]]\n",
+      "--- 0.02300000005561742 ms ---\n"
+     ]
+    }
+   ],
    "source": [
-    "# Сортировка выбором.\n",
-    "# Берётся срез массива, в котором минимальный элемент переносят в самый левый угол,\n",
-    "# после чего срез уменьшается и цикл повторяется.\n",
-    "start_time = time.time()\n",
-    "#TODO\n",
-    "print(\"--- {0} ms ---\".format(round((time.time() - start_time)*1000)))"
+    "matrix_copy_1 = copy.deepcopy(matrix)\n",
+    "print(matrix_copy,'\\n')\n",
+    "\n",
+    "def selection_sort_matrix(matrix):\n",
+    "    for i in range(len(matrix)):\n",
+    "        min_index = i\n",
+    "        for j in range(i+1, len(matrix)):\n",
+    "            if matrix[j][0] < matrix[min_index][0]:\n",
+    "                min_index = j\n",
+    "        matrix[i], matrix[min_index] = matrix[min_index], matrix[i]\n",
+    "    return matrix\n",
+    "\n",
+    "\n",
+    "print(selection_sort_matrix(matrix))\n",
+    "\n",
+    "start = timeit.default_timer()\n",
+    "end = timeit.default_timer()\n",
+    "\n",
+    "print(\"--- {0} ms ---\".format((end - start) * 1000))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "roman-silly",
    "metadata": {
     "id": "roman-silly",
     "outputId": "84666b71-fb68-4c07-d27d-e716af29fcbb",
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[12 18 23 24 25]\n",
+      " [19 20 24 25 33]\n",
+      " [13 18 20 25 30]] \n",
+      "\n",
+      "[[12 18 23 24 25]\n",
+      " [19 20 24 25 33]\n",
+      " [13 18 20 25 30]]\n",
+      "--- 0.023399999918183312 ms ---\n"
+     ]
+    }
+   ],
    "source": [
-    "# Сортировка вставкой.\n",
-    "start_time = time.time()\n",
-    "#TODO\n",
-    "print(\"--- {0} ms ---\".format(round((time.time() - start_time)*1000)))"
+    "matrix_copy_2 = copy.deepcopy(matrix_2)\n",
+    "\n",
+    "def insertion_sort_matrix(matrix):\n",
+    "    for i in range(len(matrix)):\n",
+    "        for j in range(1, len(matrix[i])):\n",
+    "            key = matrix[i][j]\n",
+    "            k = j - 1\n",
+    "            while k >= 0 and matrix[i][k] > key:\n",
+    "                matrix[i][k + 1] = matrix[i][k]\n",
+    "                k -= 1\n",
+    "            matrix[i][k + 1] = key\n",
+    "    return matrix\n",
+    "\n",
+    "print(insertion_sort_matrix(matrix_2))\n",
+    "\n",
+    "start = timeit.default_timer()\n",
+    "end = timeit.default_timer()\n",
+    "\n",
+    "print(\"--- {0} ms ---\".format((end - start) * 1000))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "vital-implementation",
    "metadata": {
     "id": "vital-implementation",
     "outputId": "7b648bf5-37a5-4d47-926d-b799f7a23be2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 3 6 7]\n",
+      " [1 3 6 7]\n",
+      " [1 3 6 7]] \n",
+      "\n",
+      "[[12 18 23 24 25]\n",
+      " [19 20 24 25 33]\n",
+      " [13 18 20 25 30]]\n",
+      "--- 0.024700000267330324 ms ---\n"
+     ]
+    }
+   ],
    "source": [
-    "# Сортировка обменом. || Сортировка пузырьком.\n",
-    "start_time = time.time()\n",
-    "#TODO\n",
-    "print(\"--- {0} ms ---\".format(round((time.time() - start_time)*1000)))"
+    "matrix_copy_3 = copy.deepcopy(matrix_2)\n",
+    "\n",
+    "\n",
+    "def bubble_sort_matrix(matrix):\n",
+    "    for i in range(len(matrix)):\n",
+    "        for j in range(len(matrix[i])-1):\n",
+    "            for k in range(len(matrix[i])-j-1):\n",
+    "                if matrix[i][k] > matrix[i][k+1]:\n",
+    "                    matrix[i][k], matrix[i][k+1] = matrix[i][k+1], matrix[i][k]\n",
+    "    return matrix\n",
+    "\n",
+    "print(bubble_sort_matrix(matrix_2))\n",
+    "\n",
+    "start = timeit.default_timer()\n",
+    "end = timeit.default_timer()\n",
+    "\n",
+    "print(\"--- {0} ms ---\".format((end - start) * 1000))"
    ]
   },
   {
